se comienza a organizar el codigo y pulir detalles del front