@@ -1,11 +1,18 @@
 package mx.dgtic.unam.sismus.service;
 
 import jakarta.servlet.http.HttpServletResponse;
-import mx.dgtic.unam.sismus.dto.*;
+import mx.dgtic.unam.sismus.dto.CancionResponseDto;
+import mx.dgtic.unam.sismus.dto.ListaRequestDto;
+import mx.dgtic.unam.sismus.dto.ListaResponseDto;
 import mx.dgtic.unam.sismus.exception.*;
 import mx.dgtic.unam.sismus.mapper.ListaMapper;
-import mx.dgtic.unam.sismus.model.*;
-import mx.dgtic.unam.sismus.repository.*;
+import mx.dgtic.unam.sismus.model.Cancion;
+import mx.dgtic.unam.sismus.model.Lista;
+import mx.dgtic.unam.sismus.model.ListaCancion;
+import mx.dgtic.unam.sismus.model.Usuario;
+import mx.dgtic.unam.sismus.repository.CancionRepository;
+import mx.dgtic.unam.sismus.repository.ListaRepository;
+import mx.dgtic.unam.sismus.repository.UsuarioRepository;
 import org.springframework.stereotype.Service;
 import org.springframework.transaction.annotation.Transactional;
 
@@ -27,14 +34,12 @@ public class ListaServiceImpl implements ListaService {
     private final UsuarioCancionService usuarioCancionService;
     private final ListaMapper listaMapper;
 
-    public ListaServiceImpl(
-            ListaRepository listaRepository,
-            CancionRepository cancionRepository,
-            UsuarioRepository usuarioRepository,
-            UsuarioService usuarioService,
-            UsuarioCancionService usuarioCancionService,
-            ListaMapper listaMapper
-    ) {
+    public ListaServiceImpl(ListaRepository listaRepository,
+                            CancionRepository cancionRepository,
+                            UsuarioRepository usuarioRepository,
+                            UsuarioService usuarioService,
+                            UsuarioCancionService usuarioCancionService,
+                            ListaMapper listaMapper) {
         this.listaRepository = listaRepository;
         this.cancionRepository = cancionRepository;
         this.usuarioRepository = usuarioRepository;
@@ -43,127 +48,107 @@ public class ListaServiceImpl implements ListaService {
         this.listaMapper = listaMapper;
     }
 
-    // ✅ Crear una nueva playlist
-    @Override
     public ListaResponseDto crearPlaylist(ListaRequestDto dto) {
         Usuario usuario = usuarioRepository.getReferenceById(dto.getUsuarioId());
-
         Lista lista = listaMapper.toEntity(dto, usuario);
         lista.setFechaCreacion(LocalDate.now());
-
-        lista = listaRepository.save(lista);
-        return listaMapper.toResponseDto(lista);
+        return listaMapper.toResponseDto(listaRepository.save(lista));
     }
 
-    // ✅ Obtener playlist con relaciones
-    @Override
+    @Transactional(readOnly = true)
     public ListaResponseDto obtenerConRelaciones(Integer id) {
         Lista lista = listaRepository.findByIdConRelaciones(id);
-        if (lista == null)
-            throw new ListaNoEncontradaException("Lista no encontrada con ID: " + id);
-
+        if (lista == null) throw new ListaNoEncontradaException("Lista no encontrada con ID: " + id);
         ListaResponseDto dto = listaMapper.toResponseDto(lista);
-        dto.setCanciones(
-                lista.getCanciones().stream()
-                        .map(lc -> {
-                            var cancionDto = listaMapper.mapCancion(lc.getCancion());
-                            cancionDto.setFechaAgregada(lc.getFechaAgregada());
-                            return cancionDto;
-                        })
-                        .toList()
-        );
+        dto.setCanciones(lista.getCanciones().stream().map(lc -> {
+            var cancionDto = listaMapper.mapCancion(lc.getCancion());
+            cancionDto.setFechaAgregada(lc.getFechaAgregada());
+            return cancionDto;
+        }).toList());
         return dto;
     }
 
-    // ✅ Obtener playlists por usuario
-    @Override
+    @Transactional(readOnly = true)
     public List<ListaResponseDto> obtenerListasPorUsuario(String nickname) {
-        return listaRepository.findByUsuario_Nickname(nickname)
-                .stream()
-                .map(listaMapper::toResponseDto)
-                .toList();
+        return listaRepository.findByUsuario_Nickname(nickname).stream().map(listaMapper::toResponseDto).toList();
     }
 
-    // ✅ Agregar canción a una lista
-    @Override
     public void agregarCancionALista(Integer listaId, Integer cancionId) {
         Lista lista = listaRepository.findByIdConRelaciones(listaId);
-        if (lista == null)
-            throw new ListaNoEncontradaException("Lista no encontrada " + listaId);
-
+        if (lista == null) throw new ListaNoEncontradaException("Lista no encontrada " + listaId);
         Cancion cancion = cancionRepository.findById(cancionId)
                 .orElseThrow(() -> new CancionNoEncontradaException("Canción no encontrada " + cancionId));
-
-        boolean existe = lista.getCanciones().stream()
-                .anyMatch(lc -> lc.getCancion().getId().equals(cancionId));
-        if (existe)
-            throw new CancionDuplicadaException("La canción ya está en la playlist.");
-
+        boolean existe = lista.getCanciones().stream().anyMatch(lc -> lc.getCancion().getId().equals(cancionId));
+        if (existe) throw new EntidadDuplicadaException("La canción ya está en la playlist.");
         ListaCancion lc = new ListaCancion();
         lc.setLista(lista);
         lc.setCancion(cancion);
         lc.setFechaAgregada(LocalDate.now());
-
         lista.getCanciones().add(lc);
         listaRepository.save(lista);
     }
 
-    // ✅ Eliminar canción de la lista
-    @Override
     public void eliminarCancionDeLista(Integer listaId, Integer cancionId) {
         Lista lista = listaRepository.findByIdConRelaciones(listaId);
-        if (lista == null)
-            throw new ListaNoEncontradaException("Lista no encontrada.");
-
+        if (lista == null) throw new ListaNoEncontradaException("Lista no encontrada.");
         lista.getCanciones().removeIf(lc -> lc.getCancion().getId().equals(cancionId));
         listaRepository.save(lista);
     }
 
-    // ✅ Eliminar una playlist completa
-    @Override
     public void eliminar(Integer id) {
         if (!listaRepository.existsById(id))
             throw new ListaNoEncontradaException("No existe la lista con ID: " + id);
         listaRepository.deleteById(id);
     }
 
-    // ✅ Descargar playlist como ZIP y registrar descargas
-    @Override
-    public void descargarPlaylistComoZip(Integer playlistId, String nickname, HttpServletResponse response) throws IOException {
-        ListaResponseDto playlist = obtenerConRelaciones(playlistId);
+    public void descargarPlaylistComoZip(Integer playlistId, String nickname, HttpServletResponse response) {
+        Lista lista = listaRepository.findById(playlistId)
+                .orElseThrow(() -> new ListaNoEncontradaException("Playlist no encontrada con ID: " + playlistId));
 
-        if (playlist.getCanciones() == null || playlist.getCanciones().isEmpty())
+        if (lista.getCanciones() == null || lista.getCanciones().isEmpty()) {
             throw new RuntimeException("La playlist está vacía.");
-
-        // 🔹 Filtrar canciones activas
-        List<CancionResponseDto> cancionesActivas = playlist.getCanciones().stream()
-                .filter(CancionResponseDto::getActivo)
-                .toList();
-
-        if (cancionesActivas.isEmpty())
-            throw new RuntimeException("No hay canciones activas para descargar.");
-
-        // 🔹 Registrar descargas si hay usuario autenticado
-        if (nickname != null) {
-            usuarioService.buscarPorNickname(nickname).ifPresent(usuarioDto ->
-                    usuarioCancionService.registrarDescargas(usuarioDto.getId(), cancionesActivas)
-            );
         }
 
-        // 🔹 Generar ZIP con las canciones
-        response.setContentType("application/zip");
-        response.setHeader("Content-Disposition",
-                "attachment; filename=\"" + playlist.getNombre() + ".zip\"");
+        try {
+            String nombreZip = lista.getNombre()
+                    .replaceAll("[^a-zA-Z0-9áéíóúÁÉÍÓÚñÑ\\s\\-]", "")
+                    .replaceAll("\\s+", "_") + ".zip";
 
-        try (ZipOutputStream zos = new ZipOutputStream(response.getOutputStream())) {
-            for (CancionResponseDto cancion : cancionesActivas) {
-                Path path = Paths.get("src/main/resources/static/" + cancion.getAudio());
-                if (Files.exists(path)) {
-                    zos.putNextEntry(new ZipEntry(Path.of(cancion.getAudio()).getFileName().toString()));
-                    Files.copy(path, zos);
-                    zos.closeEntry();
+            response.setContentType("application/zip");
+            response.setHeader("Content-Disposition", "attachment; filename=\"" + nombreZip + "\"");
+
+            try (ZipOutputStream zipOut = new ZipOutputStream(response.getOutputStream())) {
+                for (ListaCancion lc : lista.getCanciones()) {
+                    Cancion cancion = lc.getCancion();
+
+                    Path rutaArchivo = Paths.get("src/main/resources/static/" + cancion.getAudio());
+                    if (Files.exists(rutaArchivo)) {
+                        String nombreArchivo = cancion.getTitulo()
+                                .replaceAll("[^a-zA-Z0-9áéíóúÁÉÍÓÚñÑ\\s\\-]", "")
+                                .replaceAll("\\s+", "_") + ".mp3";
+
+                        ZipEntry zipEntry = new ZipEntry(nombreArchivo);
+                        zipOut.putNextEntry(zipEntry);
+                        Files.copy(rutaArchivo, zipOut);
+                        zipOut.closeEntry();
+                    }
                 }
+                zipOut.finish();
             }
+
+        } catch (IOException e) {
+            throw new RuntimeException("Error al generar el archivo ZIP: " + e.getMessage(), e);
         }
     }
+
+    public void crearPlaylistVacia(String nombre, Integer usuarioId) {
+        Usuario usuario = usuarioRepository.findById(usuarioId)
+                .orElseThrow(() -> new UsuarioNoEncontradoException("Usuario no encontrado"));
+        Lista lista = new Lista();
+        lista.setNombre(nombre);
+        lista.setUsuario(usuario);
+        lista.setFechaCreacion(LocalDate.now());
+        listaRepository.save(lista);
+    }
+
 }
